extends Control



func _on_back_2_pressed():
	get_tree().change_scene_to_file("res://scenes/main_menu.tscn")




func _on_lvl_1_pressed():
	get_tree().change_scene_to_file("res://scenes/test_level.tscn")


func _on_lvl_2_pressed():
	pass # Replace with function body.


func _on_lvl_3_pressed():
	pass # Replace with function body.


func _on_lvl_4_pressed():
	pass # Replace with function body.


func _on_lvl_5_pressed():
	pass # Replace with function body.


func _on_lvl_6_pressed():
	pass # Replace with function body.


func _on_lvl_7_pressed():
	pass # Replace with function body.


func _on_lvl_8_pressed():
	pass # Replace with function body.


func _on_lvl_9_pressed():
	pass # Replace with function body.


func _on_lvl_10_pressed():
	pass # Replace with function body.


func _on_lvl_11_pressed():
	pass # Replace with function body.


func _on_lvl_12_pressed():
	pass # Replace with function body.
